# OMSPBase

./: .dockerignore  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  Dockerfile  README.md  SKILL.md  bootstrap.bat  bootstrap.sh  clippy.toml  deny.toml  docker-compose.yml  package-lock.json  package.json  pixi.bat  pixi.sh  pixi.toml  rust-toolchain.toml  tarpaulin.toml
.agents/memorys/: conventions.md  decisions.md  pitfalls.md  status.md
.agents/rules/: README.md
.agents/rules/common/: agents.md  constraints.md  development-workflow.md
.agents/rules/rust/: testing.md
.agents/skills/book-to-skill/: .gitignore  .skill_id
.agents/skills/doc-audit/: .skill_id  SKILL.md
.agents/skills/openspec-apply-change/: .skill_id
.agents/skills/openspec-archive-change/: .skill_id
.agents/skills/openspec-explore/: .skill_id  SKILL.md
.agents/skills/openspec-propose/: .skill_id  SKILL.md
.agents/skills/openspec-sync-specs/: .skill_id
.agents/skills/test-harness/: SKILL.md
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.opencode/: acp.jsonc  agent-model-tiers.md  init-lsp-wrap.mjs  init-mcp-codegraph.mjs  init-mcp-openspace.mjs  init-mcp-playwright.mjs  init-mcp-postgres.mjs  oh-my-openagent.jsonc  opencode.json
config/: host.conf  omspbase-host.service
crates/omspbase-client/: Cargo.toml
crates/omspbase-client/src/: config.rs  control.rs  decode.rs  engine_adapters.rs  main.rs  signaling.rs  transport.rs  webrtc_transport.rs
crates/omspbase-codec/: Cargo.toml  build.rs
crates/omspbase-codec/src/: codec.rs  config.rs  decoder.rs  encoder.rs  error.rs  factory.rs  frame.rs  lib.rs  packet.rs
crates/omspbase-codec/src/backend/: ffmpeg.rs  gstreamer.rs  mod.rs  stub.rs
crates/omspbase-codec/tests/: config_tests.rs  decoder_lifecycle_tests.rs  encoder_lifecycle_tests.rs  error_tests.rs  roundtrip.rs  stub_tests.rs
crates/omspbase-common/: Cargo.toml
crates/omspbase-common/src/: auth.rs  config.rs  error.rs  metrics.rs  protocol.rs
crates/omspbase-core/: Cargo.toml
crates/omspbase-core/src/: auth.rs  broadcast.rs  config.rs  engine.rs  error.rs  lib.rs  metrics.rs  pipeline.rs  plugin.rs  protocol.rs
crates/omspbase-host/: Cargo.toml
crates/omspbase-host/src/: config.rs  emergency.rs  engine_adapters.rs  main.rs  metrics.rs  pipeline.rs  session.rs  signaling.rs  transport.rs  webrtc_transport.rs
crates/omspbase-media/: Cargo.toml
crates/omspbase-media/examples/: square-gen-egui.rs  square-gen.rs  viewer.rs
crates/omspbase-media/src/: engine.rs  error.rs  lib.rs  pixel_format.rs  plugin.rs  transform.rs
crates/omspbase-media/src/backend/: native.rs
crates/omspbase-media/src/backends/: libyuv.rs  mod.rs  native.rs
crates/omspbase-media/src/base/: buffer.rs  frame.rs  mod.rs  rotation.rs
crates/omspbase-media/src/pipeline/: broadcast.rs  broadcaster.rs  core.rs  generator.rs  mod.rs  sink.rs  source.rs
crates/omspbase-media/src/pipeline/generator/: mod.rs  smpte_bars.rs  squares.rs  timestamp.rs
crates/omspbase-media/src/pipeline/generator/fonts/: bitmap_font.rs  mod.rs  text_burner.rs
crates/omspbase-media/tests/: convert_e2e.rs  generator_e2e.rs  smoke_generator.rs  transform_e2e.rs
crates/omspbase-media/tests/common/: mod.rs
crates/omspbase-remote/: Cargo.toml
crates/omspbase-remote-client/: Cargo.toml
crates/omspbase-remote-client/src/: config.rs  control.rs  decode.rs  engine_adapters.rs  main.rs  signaling.rs  transport.rs  webrtc_transport.rs
crates/omspbase-remote-host/: Cargo.toml
crates/omspbase-remote-host/src/: control.rs  emergency.rs  engine_adapters.rs  main.rs  metrics.rs  pipeline.rs  session.rs  signaling.rs  transport.rs  webrtc_transport.rs
crates/omspbase-remote/config/: remote.conf
crates/omspbase-remote/src/: config.rs  control.rs  decode.rs  main.rs  signaling.rs  transport.rs  webrtc_transport.rs
crates/omspbase-server/: Cargo.toml
crates/omspbase-server/config/: server.conf
crates/omspbase-server/src/: config.rs  lib.rs  main.rs  monitor.rs  relay.rs  room.rs  sfu.rs  signaling.rs
crates/omspbase-server/tests/: e2e.rs  e2e_sfu.rs  integration_test.rs
crates/omspbase-webrtc/: Cargo.toml
crates/omspbase-webrtc/examples/: webrtc_loopback_egui.rs
crates/omspbase-webrtc/src/: channel.rs  data_channel.rs  engine.rs  factory.rs  lib.rs  peer.rs  peer_connection.rs  rtp.rs  rtp_params.rs  sdp.rs  stats.rs  track.rs  traits.rs
crates/omspbase-webrtc/src/backend/: mod.rs  stub.rs  webrtc_rs.rs  webrtc_sys.rs
crates/omspbase-webrtc/tests/: e2e.rs  media_frame_e2e.rs  observer_tests.rs  p2p_codec_e2e.rs  w3c_api_tests.rs  webrtc_loopback.rs  webrtc_sys_tests.rs
crates/omspbase-webrtc/tests/common/: loopback.rs  mod.rs
docs/: architecture.md  doc-audit-2026-07-17.md
docs/modules/: 00-overview.md  01-product-capabilities.md  02-deployment-modes.md  03-client-host.md  04-sdk-layers.md  05-auth-permissions.md  06-plugin-system.md  07-protocols.md  08-pipeline-model.md  09-transport-architecture.md  10-signaling-architecture.md  11-napi-binding.md  12-recording-playback.md  13-server-architecture.md  14-remote-architecture.md  15-component-architecture.md  16-admin-dashboard.md  17-webrtc-crate.md  18-codec-crate.md  ci-cd-pipeline.md  error-model.md  operations.md  security-architecture.md  sfu-mediasoup-integration.md  testing-strategy.md  upgrade-migration.md
docs/modules/development/: docker-workflow.md  macos-dev-workflow.md  sfu-verification.md
docs/modules/video-conference/: README.md  api.md  architecture.md  data-model.md  deployment.md  sfu-config.md  (+1 more)
docs/reference/: ffmpeg-static-build-strategy.md  janus-gateway.md
docs/research/: remote-desktop.md  streaming.md  teleoperation.md  video-conference.md
docs/sdd/: 01-camera-capture.md  02-webrtc-push.md  03-decode-render.md  04-datachannel-control.md  05-host-web-config.md  06-server-monitoring.md  07-emergency-stop.md  README.md  omspbase-codec-acceptance-criteria.md
scripts/: _common.sh  e2e-test.sh  install.sh  pixi-init.bat  pixi-init.sh  pixi-shell.bat  pixi-shell.sh
(+24 files in other folders)
