[package]
name = "omspbase-codec"
version.workspace = true
edition.workspace = true
description = "OMSPBase Codec — unified video encode/decode API (H.264), GStreamer + FFmpeg dual backend"
license.workspace = true

[dependencies]
thiserror = "2"
tracing = "0.1"
omspbase-core = { path = "../omspbase-core" }

# FFmpeg backend (static link, Remote default)
ffmpeg-next = { version = "7", optional = true }

# GStreamer backend (dynamic link, Host default)
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }

[features]
default = []
backend-ffmpeg = ["dep:ffmpeg-next"]
backend-gstreamer = ["dep:gstreamer", "dep:gstreamer-app"]
