[package]
name = "omspbase-core"
version = "0.1.0"
edition = "2024"
description = "OMSPBase shared abstractions: config schemas, error codes, metrics, protocol definitions"
license = "Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
async-trait = "0.1"
prometheus-client = "0.22"
hmac = "0.12"
sha2 = "0.10"
tokio = { version = "1", features = ["sync", "rt", "time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
