[package]
name = "omspbase-media"
version.workspace = true
edition.workspace = true
description = "OMSPBase Media — video frame types, buffers, source/sink pipeline, transforms"
license.workspace = true

[dependencies]
thiserror = "2"
tracing = "0.1"
rand = "0.8"

[dev-dependencies]
eframe = "0.30"
egui = "0.30"
image = "0.25"

[features]
default = ["backend-libyuv-sys"]
backend-libyuv-sys = []
backend-native = []

[package.metadata.docs.rs]
features = ["backend-libyuv-sys"]