[package]
name = "omspbase-media"
version.workspace = true
edition.workspace = true
description = "OMSPBase Media — video frame types, buffers, source/sink pipeline, transforms"
license.workspace = true

[dependencies]
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["clock"] }
rand = "0.8"
yuv-sys = { version = "0.3", optional = true }
tokio = { version = "1", features = ["sync", "rt-multi-thread", "time", "macros"] }

[dev-dependencies]
eframe = "0.30"
egui = "0.30"
image = "0.25"

[features]
default = ["backend-yuv-sys"]
backend-yuv-sys = ["dep:yuv-sys"]
backend-native = []

[package.metadata.docs.rs]
features = ["backend-yuv-sys"]

[[example]]
name = "viewer"
required-features = ["backend-yuv-sys"]

[[example]]
name = "square-gen-egui"
required-features = ["backend-yuv-sys"]
