[package]
name = "omspbase-remote-client"
version = "0.1.0"
edition = "2024"
description = "OMSPBase Remote Client — WebRTC receive, GStreamer decode, DataChannel control (cockpit/operator side)"
license = "Apache-2.0"

[[bin]]
name = "omspbase-remote-client"
path = "src/main.rs"

[dependencies]
omspbase-common = { path = "../omspbase-common" }
omspbase-media = { path = "../omspbase-media" }
# GStreamer (optional — requires system GStreamer)
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

# WebRTC (omspbase-webrtc thin wrapper around webrtc-rs)
omspbase-webrtc = { path = "../omspbase-webrtc", features = ["backend-webrtc-rs"] }

# HTTP + WebSocket (config UI)
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["connect"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Config + serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Crypto (HMAC for DataChannel)
hmac = "0.12"
sha2 = "0.10"

# Async utilities
futures-util = "0.3"
base64 = "0.22"

[features]
default = []
gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]
webrtc = []
production = ["gstreamer", "webrtc"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
