[package]
name = "omspbase-server"
version = "0.1.0"
edition = "2024"
description = "OMSPBase Server — signaling relay, room management, and monitoring"
license = "Apache-2.0"

[[bin]]
name = "omspbase-server"
path = "src/main.rs"

[dependencies]
# Shared core crate
omspbase-core = { path = "../omspbase-core" }

# WebRTC relay (optional — same feature gate pattern as Host transport.rs)
webrtc = { version = "0.11", optional = true }

# HTTP + WebSocket
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Config + serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus-client = "0.22"

# Systemd
sd-notify = "0.4"

# Async utilities
futures-util = "0.3"
tokio-stream = "0.1"

# Shared state
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
webrtc = ["dep:webrtc"]
production = ["webrtc"]

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
