[package]
name = "omspbase-server"
version = "0.1.0"
edition = "2024"
description = "OMSPBase Server — signaling relay, room management, and monitoring"
license = "Apache-2.0"

[[bin]]
name = "omspbase-server"
path = "src/main.rs"

[dependencies]
# Shared core crate
omspbase-common = { path = "../omspbase-common" }

# WebRTC relay (optional)
omspbase-webrtc = { path = "../omspbase-webrtc", optional = true }

# mediasoup SFU (optional, Linux only)
mediasoup = { version = "0.23", optional = true }

# HTTP + WebSocket
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }

# Config + serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus-client = "0.22"

# Async utilities
futures-util = "0.3"
tokio-stream = "0.1"

# Shared state
dashmap = "6"
uuid = { version = "1", features = ["v4"] }

[features]
default = []
webrtc = ["dep:omspbase-webrtc"]
sfu-mediasoup = ["dep:mediasoup"]
production = ["webrtc", "sfu-mediasoup"]

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http = "1"
tokio-tungstenite = "0.24"
base64 = "0.22"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
