[package]
name = "omspbase-webrtc"
version = "0.1.0"
edition = "2024"
description = "OMSPBase WebRTC thin wrapper — pure Rust webrtc-rs backend"
license = "Apache-2.0"

[dependencies]
webrtc = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
tracing = "0.1"
thiserror = "2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
# Enable real WebRTC via webrtc-rs (requires tokio runtime)
webrtc-backend = ["dep:webrtc"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
webrtc = "0.12"
