[package]
name = "omspbase-webrtc"
version = "0.1.0"
edition = "2024"
description = "OMSPBase WebRTC — multi-backend W3C API wrapper (libwebrtc via webrtc-sys default)"
license = "Apache-2.0"

[dependencies]
webrtc = { version = "0.12", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
cxx = { version = "1", optional = true }
webrtc-sys = { version = "0.3", optional = true }
tracing = "0.1"
thiserror = "2"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["backend-webrtc-sys"]
# Use real libwebrtc via webrtc-sys FFI (default)
backend-webrtc-sys = ["dep:webrtc-sys", "dep:cxx"]
# Use webrtc-rs pure Rust implementation (Phase 2+)
backend-webrtc-rs = ["dep:webrtc"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
egui = "0.30"
eframe = { version = "0.30", features = ["default"] }
webrtc = "0.12"
omspbase-media = { path = "../omspbase-media" }
